commit final